<resources>
    <string name="app_name">Salaamat</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LogIn</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_sign_up">SignUp</string>
    <string name="btn_link_login">LogIn</string>
    <string name="btn_link_signup">SignUP</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">DOB</string>


</resources>
